system-components/envoy/internal/gateway.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.kubernetes.io/target: inf-k8s.net
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: git-ssh
      protocol: TCP
      port: 2222
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
        kinds:
          - group: gateway.networking.k8s.io
            kind: TCPRoute

    - name: wildcard-inf-k8s-https
      protocol: HTTPS
      hostname: "*.inf-k8s.net"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-inf-k8s-tls

    - name: inf-k8s-https
      protocol: HTTPS
      hostname: inf-k8s.net
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: inf-k8s-tls
