system-components/envoy/internal/backend.policy.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: gateway-backend-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
  mergeType: "StrategicMerge"
  loadBalancer:
    type: RoundRobin
    zoneAware:
      preferLocal:
        minEndpointsThreshold: 1
  tcpKeepalive:
    probes: 9
    idleTime: "7200s"
    interval: "75s"
